<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Who Says?</string>
    <string name="simon">Simon</string>
    <string name="continue_button">Continue</string>
    <string name="save">Save</string>
    <string name="pause">Pause</string>
    <string name="accept">Acept</string>
    <string name="cancel">Cancel</string>
    <string name="turn">Turn</string>
    <string name="ok">Ok</string>
    <string name="no_scoreboard">No scoreboard implementation yet</string>
    <string name="ready">Ready</string>
    <string name="set">Set</string>
    <string name="go">Go</string>

    <string name="you_want_to_replay">Retry?</string>
    <string name="you_want_to_replay_description">You lost, do you want to play again?</string>

    <string name="goind_home">Home</string>
    <string name="going_home_description">Do you want to return? You will lose your current score</string>


    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_content_game_size">Grid Size</string>
    <string name="settings_content_sound_fx">Sounds</string>
    <string name="settings_content_sound_fx_description">Enables or disables the sound effects</string>

    <string name="settings_content_game_size_normal">Normal</string>
    <string name="settings_content_game_size_normal_description">A two by two grid</string>
    <string name="settings_content_game_size_big">Big</string>
    <string name="settings_content_game_size_big_description">A three by three grid</string>

    <string name="settings_content_game_speed">Speed</string>
    <string name="settings_content_game_speed_normal">Normal</string>
    <string name="settings_content_game_speed_normal_description">Normal paced game</string>
    <string name="settings_content_game_speed_fast">Fast</string>
    <string name="settings_content_game_speed_fast_description">Fast paced game</string>
    <string name="settings_content_game_speed_insane">Insane</string>
    <string name="settings_content_game_speed_insane_description">Insane paced game</string>

    <!--Confirm Save-->
    <string name="settings_confirm_save_message">Your score will be lost, do you want save anyway?</string>

    <string name="score_main_activity">Score</string>
    <string name="default_score_main_activity">0</string>

    <!--Simon Says Buttons Descriptions-->
    <string name="simon_yellow_button_description">Yellow button</string>
    <string name="simon_blue_button_description">Blue button</string>
    <string name="simon_red_button_description">Red button</string>
    <string name="simon_green_button_description">Green button</string>
    <string name="simon_teal_button_description">Teal button</string>
    <string name="simon_lime_button_description">Lime button</string>
    <string name="simon_orange_button_description">Orange button</string>
    <string name="simon_purple_button_description">Purple button</string>
    <string name="simon_gray_button_description">Gray button</string>
    <string name="your_turn">Yours</string>

    <!--Infor Dialog-->
    <string name="information">Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="close">Close</string>
    <string name="about_developer">Developer</string>
    <string name="music_creator">Music Creator</string>

    <!--Exceptions-->
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="events_exception">There was an issue communicating with the events</string>
    <string name="achievements_exception">There was an issue communicating with the achievements</string>
    <string name="leaderboards_exception">There was an issue communicating with the score boards</string>
    <string name="players_exception">There was an issue communicating with players provider</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

    <!--URIS-->
    <string name="uri_privacy_policy" translatable="false">https://android.alecsisduarte.now.sh/privacy_policy.html</string>
    <string name="uri_about_me" translatable="false">https://about-me.alecsisduarte.now.sh</string>
    <string name="uri_music_creator" translatable="false">https://musiclab.chromeexperiments.com/Song-Maker/</string>
</resources>
