<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:minWidth="@dimen/dialog_width"
    android:layout_height="match_parent"
    android:minHeight="@dimen/dialog_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    tools:context=".dialogs.SettingsDialog"
    android:padding="@dimen/dialog_padding">

    <TextView
        style="@style/TitleText"
        android:layout_gravity="center"
        android:text="@string/settings_title" />

    <View style="@style/Divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/ContentText"
                    android:text="@string/settings_content_game_size" />

                <RadioGroup
                    android:id="@+id/gridSizeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/normalSizeRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_content_game_size_normal_description"
                        android:text="@string/settings_content_game_size_normal"
                        app:fontFamily="@font/space_mono" />

                    <RadioButton
                        android:id="@+id/bigSizeRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_content_game_size_big_description"
                        android:text="@string/settings_content_game_size_big"
                        app:fontFamily="@font/space_mono" />
                </RadioGroup>

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/ContentText"
                    android:text="@string/settings_content_game_speed" />

                <RadioGroup

                    android:id="@+id/gameSpeedRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/normalSpeedRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_content_game_speed_normal_description"
                        android:text="@string/settings_content_game_speed_normal"
                        app:fontFamily="@font/space_mono" />

                    <RadioButton
                        android:id="@+id/fastSpeedRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_content_game_speed_fast_description"
                        android:text="@string/settings_content_game_speed_fast"
                        app:fontFamily="@font/space_mono" />

                    <RadioButton
                        android:id="@+id/insaneSpeedRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_content_game_speed_insane_description"
                        android:text="@string/settings_content_game_speed_insane"
                        app:fontFamily="@font/space_mono" />
                </RadioGroup>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/soundSwitchText"
                    style="@style/ContentText"
                    android:layout_weight="1"
                    android:text="@string/settings_content_sound_fx" />

                <Switch
                    android:id="@+id/soundSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/settings_content_sound_fx_description" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/TextButton"
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save" />

</LinearLayout>