<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background"
    android:minWidth="@dimen/card_container_width"
    android:orientation="vertical"
    android:padding="@dimen/card_padding">

    <TextView
        style="@style/TitleText"
        android:layout_gravity="center"
        android:text="@string/information"
        app:fontFamily="@font/viga" />

    <View
        style="@style/Divider"
        android:layout_width="match_parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_container_inner_padding" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/aboutMeButton"
        style="@style/Button"
        android:layout_gravity="center"
        android:text="@string/about_developer" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_container_inner_padding" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacyPolicyButton"
        style="@style/Button"
        android:layout_gravity="center"
        android:text="@string/privacy_policy" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_container_inner_padding" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/musicCreationButton"
        style="@style/Button"
        android:layout_gravity="center"
        android:text="@string/music_creator" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_container_inner_padding" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeButton"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/close" />

</LinearLayout>