<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/normalYellowButton"
            style="@style/YellowSimonButton"
            android:contentDescription="@string/simon_yellow_button_description" />

        <Space
            android:layout_width="@dimen/simon_buttons_separation"
            android:layout_height="match_parent" />

        <ImageButton
            android:contentDescription="@string/simon_red_button_description"
            android:id="@+id/normalRedButton"
            style="@style/RedSimonButton" />
    </LinearLayout>
    <Space android:layout_height="@dimen/simon_buttons_separation" android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:contentDescription="@string/simon_green_button_description"
            android:id="@+id/normalGreenButton"
            style="@style/GreenSimonButton" />

        <Space
            android:layout_width="@dimen/simon_buttons_separation"
            android:layout_height="match_parent" />

        <ImageButton
            android:contentDescription="@string/simon_blue_button_description"
            android:id="@+id/normalBlueButton"
            style="@style/BlueSimonButton" />
    </LinearLayout>

</LinearLayout>